--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .logo {
-    padding-top: 10px;
+    padding-top: 20px;
     animation: fadein 1.2s;
     width: 270px;
 }
@@ -13,8 +13,12 @@ body {
     color: #e0e0e0;
 }
 
+.container {
+    width: 80%;
+}
+
 .row {
-    margin-top: 6px;
+    margin-top: 8px;
 }
 
 .panel-primary {
@@ -61,6 +65,31 @@ h1, h3 {
     background-color: #1e1e1e;
 }
 
-#savings-results{
+#savings-results {
     margin-top: 7px;
+}
+
+.footer {
+    padding: 5px;
+    font-size: 11px;
+    text-align: center;
+}
+
+@media only screen and (max-width: 1000px) {
+    .container {
+        width: 100%;
+    }
+
+    .row {
+        margin-top: 8px;
+        font-size: 25px;
+    }
+
+    .nav-tabs {
+        font-size: 20px;
+    }
+
+    .logo {
+        width: 170px;
+    }
 }
