--- a/style.css
+++ b/style.css
@@ -1,236 +1,251 @@
 .logo-container {
-    text-align: center;
+  text-align: center;
 }
 
 .logo {
-    padding-top: 20px;
-    animation: fadein 1.2s;
-    width: 270px;
+  padding-top: 20px;
+  animation: fadein 1.2s;
+  width: 270px;
 }
 
-.nav-tabs > li > a {
-    color: #e0e0e0;
+.nav-tabs>li>a {
+  color: #e0e0e0;
 }
 
-.nav-tabs > li > a:hover {
-    color: black;
+.nav-tabs>li>a:hover {
+  color: black;
 }
 
 body {
-    background-color: #121212;
-    color: #e0e0e0;
+  background-color: #121212;
+  color: #e0e0e0;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
-    width: 80%;
-}
-
-.row {
-    margin-top: 8px;
-}
-
-.panel-primary {
-    border-color: #333;
-}
-
-.panel-primary > .panel-heading {
-    background-color: #333;
-    border-color: #333;
-    color: #e0e0e0;
-}
-
-.form-simple {
-    background-color: #333;
-    color: #e0e0e0;
-    border: 1px solid #555;
-}
-
-input[type="text"] {
-    background-color: #333;
-    color: #e0e0e0;
-    border: 1px solid #555;
-}
-
-select {
-    background-color: #333;
-    color: #e0e0e0;
-    border: 1px solid #555;
-}
-
-label {
-    color: #e0e0e0;
-}
-
-h1, h3 {
-    color: #e0e0e0;
-}
-
-.panel-body {
-    background-color: #1e1e1e;
-}
-
-#savings-chart {
-    background-color: #1e1e1e;
-}
-
-#savings-results {
-    margin-top: 7px;
+  flex: 1;
+  width: 80%;
 }
 
 .footer {
-    padding: 5px;
-    font-size: 11px;
-    text-align: center;
+  padding: 15px;
+  font-size: 11px;
+  text-align: center;
+  color: #e0e0e0;
+}
+
+.container {
+  width: 80%;
+}
+
+.row {
+  margin-top: 8px;
+}
+
+.panel-primary {
+  border-color: #333;
+}
+
+.panel-primary>.panel-heading {
+  background-color: #333;
+  border-color: #333;
+  color: #e0e0e0;
+}
+
+.form-simple {
+  background-color: #333;
+  color: #e0e0e0;
+  border: 1px solid #555;
+}
+
+input[type="text"] {
+  background-color: #333;
+  color: #e0e0e0;
+  border: 1px solid #555;
+}
+
+select {
+  background-color: #333;
+  color: #e0e0e0;
+  border: 1px solid #555;
+}
+
+label {
+  color: #e0e0e0;
+}
+
+h1,
+h3 {
+  color: #e0e0e0;
+}
+
+.panel-body {
+  background-color: #1e1e1e;
+}
+
+#savings-chart {
+  background-color: #1e1e1e;
+}
+
+#savings-results {
+  margin-top: 7px;
 }
 
 .card {
-    width: 48%;
-    float: left;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #333;
-    border-radius: 20px;
-    padding: 25px 30px;
-    gap: 10px;
-    border: 2px solid transparent;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-  }
-  
-  .card:hover {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card > .image {
-    width: 70px;
-    height: 70px;
-    transition: all 0.1s ease-in-out;
-  }
-  
-  .card > .number-h1 {
-    font-size: 15px;
-    font-weight: bold;
-    padding: 5px 7px;
-    border-radius: 10px;
-    color: #333;
-    background-color: #e57e25;
-  }
-  
-  .card > .h1 {
-    font-size: 17px;
-    font-weight: bold;
-    text-align: center;
-  }
-  
-  .card > .p {
-    color: #9e9da1;
-    font-size: 14px;
-    text-align: center;
-  }
+  width: 48%;
+  float: left;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #333;
+  border-radius: 20px;
+  padding: 25px 30px;
+  gap: 10px;
+  border: 2px solid transparent;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
 
-  .form-container {
-    width: 48%;
-    background: linear-gradient(#212121, #212121) padding-box,
-                linear-gradient(145deg, transparent 35%,#fbd3a4, #a18d77) border-box;
-    border: 2px solid transparent;
-    padding: 14px 24px;
-    font-size: 14px;
-    font-family: inherit;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    float: right;
-    box-sizing: border-box;
-    border-radius: 16px;
-  }
-  
-  .form-container button:active {
-    scale: 0.95;
-  }
-  
-  .form-container .form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form-container .form-group {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form-container .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    color: #b1b1b1;
-    font-weight: 600;
-    font-size: 12px;
-  }
-  
-  .form-container .form-group input {
-    width: 100%;
-    padding: 10px 16px;
-    border-radius: 8px;
-    color: #fff;
-    font-family: inherit;
-    background-color: transparent;
-    border: 1px solid #414141;
-  }
-  
-  .form-container .form-group textarea {
-    width: 100%;
-    padding: 10px 16px;
-    border-radius: 8px;
-    resize: none;
-    color: #fff;
-    height: 96px;
-    border: 1px solid #414141;
-    background-color: transparent;
-    font-family: inherit;
-  }
-  
-  .form-container .form-group input::placeholder {
-    opacity: 0.5;
-  }
-  
-  .form-container .form-group input:focus {
-    outline: none;
-    border-color: #fbd3a4;
-  }
-  
-  .form-container .form-group textarea:focus {
-    outline: none;
-    border-color: #fbd3a4;
-  }
-  
-  .form-container .form-submit-btn {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    align-self: flex-start;
-    font-family: inherit;
-    color: #b1b1b1;
-    font-weight: 600;
-    width: 100%;
-    background: #313131;
-    border: 1px solid #414141;
-    padding: 12px 16px;
-    font-size: inherit;
-    gap: 8px;
-    margin-top: 8px;
-    cursor: pointer;
-    border-radius: 6px;
-  }
-  
-  .form-container .form-submit-btn:hover {
-    background-color: #fff;
-    border-color: #fff;
-  }
-  
-  
+.card:hover {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.card>.image {
+  width: 70px;
+  height: 70px;
+  transition: all 0.1s ease-in-out;
+}
+
+.card>.number-h1 {
+  font-size: 15px;
+  font-weight: bold;
+  padding: 5px 7px;
+  border-radius: 10px;
+  color: #333;
+  background-color: #e57e25;
+}
+
+.card>.h1 {
+  font-size: 17px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.card>.p {
+  color: #9e9da1;
+  font-size: 14px;
+  text-align: center;
+}
+
+.form-container {
+  width: 48%;
+  background: linear-gradient(#212121, #212121) padding-box,
+    linear-gradient(145deg, transparent 35%, #fbd3a4, #a18d77) border-box;
+  border: 2px solid transparent;
+  padding: 14px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  float: right;
+  box-sizing: border-box;
+  border-radius: 16px;
+}
+
+.form-container button:active {
+  scale: 0.95;
+}
+
+.form-container .form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container .form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container .form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #b1b1b1;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.form-container .form-group input {
+  width: 100%;
+  padding: 10px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #414141;
+}
+
+.form-container .form-group textarea {
+  width: 100%;
+  padding: 10px 16px;
+  border-radius: 8px;
+  resize: none;
+  color: #fff;
+  height: 96px;
+  border: 1px solid #414141;
+  background-color: transparent;
+  font-family: inherit;
+}
+
+.form-container .form-group input::placeholder {
+  opacity: 0.5;
+}
+
+.form-container .form-group input:focus {
+  outline: none;
+  border-color: #fbd3a4;
+}
+
+.form-container .form-group textarea:focus {
+  outline: none;
+  border-color: #fbd3a4;
+}
+
+.form-container .form-submit-btn {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  align-self: flex-start;
+  font-family: inherit;
+  color: #b1b1b1;
+  font-weight: 600;
+  width: 100%;
+  background: #313131;
+  border: 1px solid #414141;
+  padding: 12px 16px;
+  font-size: inherit;
+  gap: 8px;
+  margin-top: 8px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.form-container .form-submit-btn:hover {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+
 .result-card {
   font-family: Arial, sans-serif;
   width: 310px;
@@ -274,6 +289,7 @@ h1, h3 {
   margin: 0 0 12px 0;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .info {
   display: flex;
   align-items: center;
@@ -318,9 +334,10 @@ h1, h3 {
   gap: 15px;
 }
 
-.card, .form-container {
+.card,
+.form-container {
   flex: 1;
-  position: relative; 
+  position: relative;
 }
 
 .form-container {
@@ -330,13 +347,14 @@ h1, h3 {
 
 .form-container .form-submit-btn {
   position: absolute;
-  bottom: 20px; 
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  width: calc(100% - 40px); 
+  width: calc(100% - 40px);
 }
 
-#left-side, #right-side {
+#left-side,
+#right-side {
   display: flex;
   flex-direction: column;
 }
@@ -353,7 +371,7 @@ h1, h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 45%; 
+  height: 45%;
   width: 90%;
 }
 
@@ -363,63 +381,74 @@ h1, h3 {
     width: 100%;
   }
 
+  .card>.h1 {
+    font-size: 30px;
+  }
+
   .card {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 
   .container {
-      width: 100%;
+    width: 100%;
   }
 
   .row {
-      margin-top: 12px;
-      font-size: 28px;
+    margin-top: 12px;
+    font-size: 28px;
   }
 
-  .form-container > form {
-      height: 580px;
-      font-size: 20px;
+  .form-container>form {
+    height: 600px;
+    font-size: 20px;
   }
 
-  .card > .p {
-      font-size: 20px;
+  .card>.p {
+    font-size: 23px;
   }
 
   .info {
-      font-size: 30px;
+    font-size: 30px;
   }
 
   .form-container .form-group label {
-      font-size: 20px;
+    font-size: 23px;
   }
 
   .nav-tabs {
-      font-size: 20px;
+    font-size: 20px;
   }
 
   .logo {
-      width: 35%;
+    width: 35%;
   }
 
   .result-card {
-      width: 60%;
+    width: 70%;
+    height: 90%;
   }
 
   .savings {
-      font-size: 1.5em;
+    font-size: 35px;
   }
 
   #savings-chart {
-      margin-bottom: 28px;
+    margin-bottom: 28px;
   }
 
-  #left-side, #right-side {
-      width: 100%;
-      float: none; /* Ensure they don't float next to each other */
+  #left-side,
+  #right-side {
+    width: 100%;
+    float: none;
   }
 
   .flex-container {
-      flex-direction: column; /* Stack the children vertically */
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .result-card-container {
+    height: 450px;
   }
 }
